<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <EditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Name of player"
            android:inputType="textCapWords" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/question_1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:src="@drawable/vlad_tepes" />

        <CheckBox
            android:id="@+id/answer_1a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/answer_1a"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/answer_1b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/answer_1b"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/answer_1c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/answer_1c"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/answer_1d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/answer_1d"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/question_2" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:src="@drawable/hollywood" />

        <RadioGroup
            android:id="@+id/question_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/answer_2a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_2a"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/answer_2b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_2b"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/answer_2c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_2c"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/answer_2d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_2d"
                android:textSize="16sp" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/question_3" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/moldova_flag" />

        <EditText
            android:id="@+id/answer_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Country name"
            android:inputType="textCapWords" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/question_4" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:src="@drawable/language_tree" />

        <RadioGroup
            android:id="@+id/question_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/answer_4a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_4a"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/answer_4b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_4b"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/answer_4c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_4c"
                android:textSize="16sp" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/question_5" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:src="@drawable/merry_cemetery" />

        <RadioGroup
            android:id="@+id/question_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/answer_5a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_5a"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/answer_5b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_5b"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/answer_5c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_5c"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/answer_5d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_5d"
                android:textSize="16sp" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/question_6" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:src="@drawable/peles_castle" />

        <RadioGroup
            android:id="@+id/question_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/answer_6a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_6a"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/aswer_6b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_6b"
                android:textSize="16sp" />

        </RadioGroup>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/submit" />


    </LinearLayout>

</ScrollView>